[tool.poetry]
name = "openfeed"
version = "1.1.5"
description = "Python SDK for Openfeed"
authors = ["Barchart <mike@barchart.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "*"
websocket-client = "^0.40.0"
protobuf = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.4"

[build-system]
requires = ["setuptools>=41.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"
